# sister_bot

./: .env  .env.dev  .env.prod  .gitignore  README.md  __version__  _coverpage.md  _navbar.md  _sidebar.md  about.md  desc.md  development.md  index.html  pyproject.toml  thanks.md  update_info.json
advanced/: README.md  custom.md  plugins.md
config/: naturel_gpt_config.yml
data/: study_config.json
data/leveldb-v3/: 003530.ldb  003935.ldb  003936.ldb  003937.ldb  003938.ldb  003939.ldb  003940.ldb  003941.ldb  003942.ldb  003943.ldb  003944.ldb  003945.ldb  003946.ldb  003947.ldb  003949.ldb  CURRENT  CURRENT.bak  LOG  MANIFEST-003532
data/memes/: meme_list.yml
data/petpet/: meme_list.yml
data/tarot/: tarot.json
install/: README.md  _sidebar.md  env.md  go-cqhttp.md  install.md  prepare.md  start.md  update.md
plugins/basic_plugins/update/: __init__.py  source.py
plugins/plugins/: chat_voice.py  evaluation_qq.py  hotlist_baidu.py  hotlist_blibli.py  hotlist_douyin.py  hotlist_weibo.py  hotlist_zhihu.py  luck_comstellation.py  luck_day.py  menu.py  pic_cosplay.py  pic_dingzhen.py  pic_erciyuan.py  pic_guidao.py  pic_jk.py  pic_legs.py  pic_lingmeng.py  pic_wallpaper.py  pic_wallpaper_4k.py  pic_wallpapers.py  random_music.py  text_chickensoup.py  text_dogdiary.py  text_joke.py  text_love.py  text_sentence.py  text_sentence_bad.py  text_sentence_cnen.py  text_sentence_comfortable.py  text_sentence_emotion.py  text_sentence_pyq.py  text_sentence_sad.py  text_sentence_sao.py  text_skl.py  text_wyy.py  translate.py  video_girl.py  welcome.py  yinglish_tr.py
source/config/: config.json
src/plugins/: chat.py  chat_voice.py  covid_query.py  evaluation_qq.py  hotlist_baidu.py  hotlist_blibli.py  hotlist_douyin.py  hotlist_weibo.py  hotlist_zhihu.py  luck_comstellation.py  luck_day.py  management.py  menu.py  pic_cosplay.py  pic_dingzhen.py  pic_erciyuan.py  pic_guidao.py  pic_jk.py  pic_legs.py  pic_lingmeng.py  pic_wallpaper.py  pic_wallpaper_4k.py  pic_wallpapers.py  random_music.py  site_tool.py  text_chickensoup.py  text_dogdiary.py  text_joke.py  text_love.py  text_sentence.py  text_sentence_bad.py  text_sentence_cnen.py  text_sentence_comfortable.py  text_sentence_emotion.py  text_sentence_pyq.py  text_sentence_sad.py  text_sentence_sao.py  text_skl.py  text_wyy.py  translate.py  (+2 more)
src/plugins/jikipedia/: __init__.py  config.py  config_basic  data_source.py  data_types.py
src/plugins/mc_svr_stat/: __init__.py  get_stat.py
src/plugins/nonebot_plugin_handle/: __init__.py  data_source.py  utils.py
src/plugins/nonebot_plugin_handle/resources/data/: idioms_common_use.txt
src/plugins/nonebot_plugin_petpet/: __init__.py  data_source.py
src/plugins/nonebot_plugin_read_60s/: __init__.py
src/plugins/nonebot_plugin_tarot/: __init__.py
src/plugins/nonebot_plugin_today_in_history/: __init__.py  config.py
src/plugins/nonebot_plugin_weather_lite/: __init__.py
src/plugins/poke_reply/: __init__.py  config.py
src/plugins/socialify/: __init__.py  data_source.py
src/plugins/yinglish_tr/: __init__.py
use/: README.md  _sidebar.md  menu.md  sys_management.md  sys_music.md  sys_picture.md  sys_tool.md  sys_video.md
use/other/: 60s.md  README.md  today_in_history.md
use/sys_emoji/: README.md  avata.md  text.md
use/sys_fun/: README.md  hotlist.md  lnteraction.md  text.md
use/sys_game/: README.md  handle.md  minesweeper.md  remake.md  tarot.md  wordle.md
utils/config/: __init__.py  config.py
