[tool.poetry]
name = "sister_bot"
version = "1.0.0"
description = "基于 Nonebot2 和 go-cqhttp 开发的QQ机器人，不正经的妹妹"
authors = ["ITSevin <itsevin@qq.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/itsevin/sister_bot"
repository = "https://github.com/itsevin/sister_bot"
documentation = "https://github.com/itsevin/sister_bot#readme"
keywords = ["nonebot", "nonebot2", "qqbot", "gocqhttp", "bot"]

[[tool.poetry.source]]
name = "ali"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0rc1"
httpx = "^0.23.0"
nonebot-plugin-apscheduler = "^0.2.0"
nonebot-plugin-htmlrender = "^0.2.0"
nonebot-plugin-imageutils = "^0.1.13.4"
nonebot-plugin-gocqhttp = "^0.6.4"
nonebot-adapter-onebot = "^2.2.0"
nonebot-plugin-handle = "^0.1.6"
nonebot-plugin-memes = "^0.3.9"
nonebot-plugin-minesweeper = "^0.1.8"
nonebot-plugin-petpet = "^0.3.19"
nonebot-plugin-remake = "^0.2.7"
nonebot-plugin-savor = "^0.2.1"
nonebot-plugin-simplemusic = "^0.1.5"
nonebot-plugin-tarot = "^0.3.3"
nonebot-plugin-weather-lite = "^0.0.1"
nonebot-plugin-wordle = "^0.1.11"
nonebot-plugin-record = "^1.0.2"
nonebot-plugin-today-in-history = "^0.1.0"
nonebot-plugin-read-60s = "^0.2.4"

[tool.poetry.dev-dependencies]

[tool.nonebot]
plugins = ["nonebot_plugin_gocqhttp", "nonebot_plugin_apscheduler", "nonebot_plugin_htmlrender", "nonebot_plugin_imageutils", "nonebot_plugin_handle", "nonebot_plugin_memes", "nonebot_plugin_minesweeper", "nonebot_plugin_petpet", "nonebot_plugin_read_60s", "nonebot_plugin_remake", "nonebot_plugin_savor", "nonebot_plugin_simplemusic", "nonebot_plugin_tarot", "nonebot_plugin_today_in_history", "nonebot_plugin_wordle", "nonebot_plugin_weather_lite", "nonebot_plugin_record"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"