[tool.poetry]
name = "sister_bot"
version = "1.0.0"
description = "基于 Nonebot2 开发的QQ机器人，不正经的妹妹"
authors = ["ITSevin <itsevin@qq.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/itsevin/sister_bot"
repository = "https://github.com/itsevin/sister_bot"
documentation = "https://github.com/itsevin/sister_bot#readme"
keywords = ["nonebot", "nonebot2", "qqbot", "bot"]
package-mode = false

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
nonebot2 = {extras = ["fastapi"], version = "^2.4.1"}
httpx = "^0.27.2"
pydantic = "^1.10"
nonebot-plugin-apscheduler = ">=0.3.0"
nonebot-plugin-htmlrender = ">=0.4.0"
nonebot-adapter-onebot = ">=2.4.0"
nonebot-plugin-remake = ">=0.4.0"
nonebot-plugin-maze = ">=0.2.4"
nonebot-plugin-withdraw = ">=0.4.0"
nonebot-plugin-code = ">=0.0.8"
nonebot-plugin-heweather = ">=0.8.0"
mcstatus = ">=10.0.1"
yinglish = ">=1.0.1"
aiohttp = ">=3.8.3"
nonebot-plugin-naturel-gpt = ">=2.1.0"
ujson = ">=5.8.0"
ruamel-yaml = ">=0.17.32"
poetry = ">=2.0.0"
nb-cli = ">=1.4.0"
toml = ">=0.10.2"
nonebot-plugin-memes = ">=0.7.12"
nonebot-plugin-boardgame = ">=0.4.1"
nonebot-plugin-minesweeper = ">=0.4.2"
nonebot-plugin-handle = ">=0.4.4"
nonebot-plugin-wordle = ">=0.4.5"
nonebot-plugin-today-in-history = ">=0.1.5"
nonebot-plugin-orm = {extras = ["default"], version = "^0.7.6"}

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_htmlrender", "nonebot_plugin_handle", "nonebot_plugin_memes", "nonebot_plugin_minesweeper", "nonebot_plugin_remake", "nonebot_plugin_today_in_history", "nonebot_plugin_wordle", "nonebot_plugin_boardgame",  "nonebot_plugin_maze", "nonebot_plugin_withdraw", "nonebot_plugin_code", "nonebot_plugin_heweather", "nonebot_plugin_naturel_gpt"]
plugin_dirs = ["plugins/basic_plugins", "plugins/plugins", "plugins/extra_plugins"]
builtin_plugins = []

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"